<?xml version="1.0"?>
<package format="3">
  <name>rs</name>
  <version>0.0.1</version>
  <description>RealSense launch package</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
